# graphql-client-302-repro

./: Cargo.toml  schema.graphql
src/: main.rs  mutation.graphql
